--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MySecret = "I am pretty."
 
 app_config_secret_key = "aldkfjaoermqeoifalkdjfnalkdsfjjkdk"
-
+hotdeal_schedule_interval = "3600" #단위, 초
 
 # tistory
 client_id = "7691b3b1da8d9da0a280f54da72e946e"
